Fix vertical icon alignment

--- a/code/index.css
+++ b/code/index.css
@@ -499,10 +499,17 @@ button {
 /**** Icons ***********************************************************************************************************/
 
 .lucide {
+
     display: inline-block;
     width: 1em;
     height: 1em;
+
+    *:has(> &:only-child) {
+        display: inline-grid;
+    }
+
 }
+
 
 
 /**** Loader ***********************************************************************************************************/
