--- a/code/tiles/page.css
+++ b/code/tiles/page.css
@@ -106,16 +106,11 @@ mark-page {
 
                 font-weight: bold;
 
-                &:has(.lucide:only-child):last-of-type {
+                &:has(> .lucide:only-child):last-of-type {
                     margin-top: 0.5em;
                     font-size: 1.5em;
                 }
 
-            }
-
-            & > hr {
-                margin-top: 0.75em;
-                border-style: dotted;
             }
 
             & > h1,
